add new-push.html to project

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
+# Generated bundles
 public_html/personal.js
 public_html/org.js
 public_html/index.js
 node_modules/
+
 .git/
+
 server/
+
+#files
+auth.php
+onesignal-init.js
